fixed placeholder not showing and styled text in textbox

--- a/interactive-comment-section/src/styles/style.scss
+++ b/interactive-comment-section/src/styles/style.scss
@@ -293,6 +293,7 @@ form {
 		min-height: 80px;
 		overflow: auto;
 		cursor: text;
+		color: $dark-blue;
 
 		&:focus {
 			border-color: $greyish-blue;
